# csp_converter

./: CMakeCache.txt  CMakeLists.txt  FindLibXml2.cmake  Makefile  README.md  cmake_install.cmake  libxml2-config.cmake
csp_converter/: Matriz.ods  Matriz.xlsx  Salida.txt  XCSP3PrintCallbacks.h  csp  leblack.clq  leblack.xml  main.cc  makefile  reblack.clq  salidados
include/: XCSP3Constraint.h  XCSP3CoreParser.h  XCSP3TreeNode.h  XMLParser.h
instances/: Blackhole-4-13-0_X2.xml  Blackhole-4-13-1_X2.clq  Blackhole-4-13-1_X2.xml  Blackhole-4-13-2_X2.xml  Blackhole-4-13-3_X2.xml  Blackhole-4-13m-0_X2.xml  Blackhole-4-13m-1_X2.xml  Blackhole-4-13m-2_X2.xml  black.xml  reblack.xml  teblack.clq  teblack.xml
samples/: .clq  csp  leblack.xml  main.cc  salidauno
src/: XCSP3CoreParser.cc  XCSP3Tree.cc  XMLParser.cc
